[package]
name = "abraca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abraca-macros = { path = "../abraca-macros" }
# error handling
anyhow = "1.0"
# serialization & deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2.3"
strum = "0.24"
strum_macros = "0.24"
# async
futures = "0.3"
tokio = { version = "1.26", features = ["full"] }
# logging
log = "0.4"
env_logger = "0.10"
# time
chrono = { version = "0.4", features = ["serde"] }
# crypto
ring = "0.16"
base64 = "0.21"
# http client
reqwest = { version = "0.11", features = ["json", "blocking"] }
# websocket
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }

[features]
testnet = []

[[example]]
name = "data_logger"
